// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildImports imports when typescript 1`] = `
"import { Browser, Page } from \\"playwright\\";
import qawolf from \\"qawolf\\";"
`;

exports[`buildImports imports when typescript 2`] = `
"import { Browser, Page, devices } from \\"playwright\\";
import qawolf from \\"qawolf\\";
const device = devices[\\"iPhone 11\\"];"
`;

exports[`buildImports includes device when specified 1`] = `
"const { devices } = require(\\"playwright\\");
const qawolf = require(\\"qawolf\\");
const device = devices[\\"iPhone 11\\"];"
`;

exports[`buildImports requires when not typescript 1`] = `"const qawolf = require(\\"qawolf\\");"`;

exports[`buildTemplate builds test template 1`] = `
"const qawolf = require(\\"qawolf\\");

let browser;
let page;

beforeAll(async () => {
  browser = await qawolf.launch();
  const context = await browser.newContext();
  await qawolf.register(context);
  page = await context.newPage();
});

afterAll(async () => {
  await qawolf.stopVideos();
  await browser.close();
});

test(\\"myName\\", async () => {
  await page.goto(\\"www.qawolf.com\\");
  await qawolf.create();
});"
`;

exports[`buildTemplate builds test template 2`] = `
"const { devices } = require(\\"playwright\\");
const qawolf = require(\\"qawolf\\");
const device = devices[\\"iPhone 11\\"];

let browser;
let page;

beforeAll(async () => {
  browser = await qawolf.launch();
  const context = await browser.newContext({ ...device });
  await qawolf.register(context);
  page = await context.newPage();
});

afterAll(async () => {
  await qawolf.stopVideos();
  await browser.close();
});

test(\\"myName\\", async () => {
  await page.goto(\\"www.qawolf.com\\");
  await qawolf.create();
});"
`;

exports[`buildTemplate builds test template 3`] = `
"const qawolf = require(\\"qawolf\\");

let browser;
let page;

beforeAll(async () => {
  browser = await qawolf.launch();
  const context = await browser.newContext();
  await qawolf.register(context);
  page = await context.newPage();
});

afterAll(async () => {
  await qawolf.stopVideos();
  await browser.close();
});

test(\\"myName\\", async () => {
  await page.goto(\\"www.qawolf.com\\");
  await qawolf.setState(page, \\"admin.json\\");
  await qawolf.create();
});"
`;

exports[`buildTemplate builds test template 4`] = `
"import { Browser, Page } from \\"playwright\\";
import qawolf from \\"qawolf\\";

let browser: Browser;
let page: Page;

beforeAll(async () => {
  browser = await qawolf.launch();
  const context = await browser.newContext();
  await qawolf.register(context);
  page = await context.newPage();
});

afterAll(async () => {
  await qawolf.stopVideos();
  await browser.close();
});

test(\\"myName\\", async () => {
  await page.goto(\\"www.qawolf.com\\");
  await qawolf.create();
});"
`;

exports[`buildTemplate builds test template 5`] = `
"import { Browser, Page, devices } from \\"playwright\\";
import qawolf from \\"qawolf\\";
const device = devices[\\"iPhone 7\\"];

let browser: Browser;
let page: Page;

beforeAll(async () => {
  browser = await qawolf.launch();
  const context = await browser.newContext({ ...device });
  await qawolf.register(context);
  page = await context.newPage();
});

afterAll(async () => {
  await qawolf.stopVideos();
  await browser.close();
});

test(\\"myName\\", async () => {
  await page.goto(\\"www.qawolf.com\\");
  await qawolf.create();
});"
`;
